# opensens-agent-swarm

./: .gitignore  CLAUDE.md  README.md  SWARM-AGENT-INSTRUCTIONS.md  package.json  pyproject.toml  roadmap_oas.md
cluster/: Agent office symlink  BOSS-AGENT-GUIDE.md  CLAUDE.md  DARKLAB-PLAN.md  DEVELOPMENT-CONTEXT.md  README.md  install.sh  pyproject.toml
cluster/Agent office/: AGENTS.md  Dockerfile  pnpm-lock.yaml
cluster/common/: browser-setup.sh  keys-setup.sh  openclaw-setup.sh  prerequisites.sh  python-env.sh  tailscale-setup.sh
cluster/configs/: academic.config.yaml  env.template  exec-approvals.json  experiment.config.yaml  leader.config.yaml  paperclip-openclaw-adapter.json
cluster/docker/: Dockerfile.leader  docker-compose.leader.yml  docker-compose.services.yml
cluster/docs/: LEADER-SETUP-GUIDE.md
cluster/roles/: academic.sh  boss.sh  experiment.sh  lab-agent.sh  leader.sh
cluster/scripts/: backup-cluster.sh  cluster-status.sh  connect-cluster.sh  pair-devices.sh  register-telegram-commands.sh  seed-paperclip.sh  setup-notebooklm-profile.sh  swarm-status-updater.py  test-connectivity.sh  update-cluster.sh  verify-cluster.sh
cluster/templates/: full-pipeline.yaml  hypothesis-test.yaml  literature-review.yaml  simulation-validate.yaml
cluster/tests/: conftest.py  test_audit.py  test_browser_security.py  test_budget.py  test_budget_concurrency.py  test_crypto.py  test_deerflow_research.py  test_dispatch.py  test_dispatch_hooks.py  test_dispatch_integration.py  test_drvp_relay.py  test_fullswarm_cmd.py  test_fullswarm_v2.py  test_health.py  test_kairos.py  test_logging_setup.py  test_models.py  test_node_bridge.py  test_orchestrator.py  test_plan_watcher_service.py  test_swarm_dispatch.py
core/: pyproject.toml
core/oas_core/: __init__.py  audit_export.py  campaign.py  campaign_journal.py  campaign_templates.py  deep_agent.py  evaluation.py  (+9 more)
(+360 files in other folders)
